infrastructure/apps/network/envoy-gateway/config/otel-collector-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
spec:
  type: ExternalName
  externalName: otel-collector.observability.svc.cluster.local
  ports:
    - port: 4317
      protocol: TCP
